package no.kristiania.httpServer.controllers;

import no.kristiania.httpServer.HttpMessage;
import no.kristiania.httpServer.QueryString;

import java.io.IOException;
import java.io.OutputStream;
import java.net.Socket;
import java.nio.charset.StandardCharsets;

public class EchoController implements HttpController {

    @Override
    public void handle(String requestMethod, HttpMessage request, Socket clientSocket, OutputStream outputStream) throws IOException {

        String statusCode = "200";
        String body = "Hello World!";
        String requestLine = request.getStartLine();
        String requestTarget = requestLine.split(" ")[1];

        int questionPos = requestTarget.indexOf('?');

        if (questionPos != -1) {
            QueryString queryString = new QueryString(requestTarget.substring(questionPos + 1));
            if (queryString.getParameter("status") != null) {
                statusCode = queryString.getParameter("status");
            }
            if (queryString.getParameter("body") != null) {
                body = queryString.getParameter("body");
            }
        }

        outputStream.write(("HTTP/1.1 " + statusCode + " OK\r\n" +
                "Content-Type: text/html\r\n" +
                "Transfer-Encoding: chunked" +
                "Content-Length: " + body.length() + "\r\n" +
                "Connection: close\r\n" +
                "\r\n" +
                body).getBytes(StandardCharsets.UTF_8));
    }
}
